# sglang_qwen3_next_plugin

./: .gitignore  README.md  changelog.md  launch_with_plugin.py  plan.md  progress.md  pyproject.toml  ref.md  sitecustomize.py  test_plugin.py
.codex/skills/sglang-plugin-version-adaptation/: SKILL.md
docs/superpowers/plans/: 2026-03-20-sglang-multi-version-plugin.md  2026-03-20-sglang-qwen3-next-plugin.md
docs/superpowers/specs/: 2026-03-20-sglang-multi-version-plugin-design.md  2026-03-20-sglang-qwen3-next-plugin-design.md
scripts/: chat_smoke.sh  check_plugin_import.py  run_acceptance.py  validate_generation.py  validate_logprob.py
sglang_qwen3_next_plugin/: __init__.py  env_override.py  launch_server.py  qwen3_next.py  versioning.py
sglang_qwen3_next_plugin/0_5_2/: qwen3_next.py
sglang_qwen3_next_plugin/_0_5_2/: __init__.py  qwen3_next.py
sglang_qwen3_next_plugin/compat/: __init__.py  sglang_0_5_2.py  sglang_0_5_9.py
sglang_qwen3_next_plugin/upstream/: __init__.py
sglang_qwen3_next_plugin/upstream/sglang_0_5_2/: __init__.py
sglang_qwen3_next_plugin/upstream/sglang_0_5_9/: __init__.py
sglang_qwen3_next_plugin/variants/: __init__.py  sglang_0_5_2.py  sglang_0_5_9.py
tests/: test_chat_smoke_script.py  test_compat_modules.py  test_dispatcher_exports.py  test_skill_layout.py  test_variant_0_5_9_source.py  test_versioning.py
