[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sglang-qwen3-next-plugin"
version = "0.2.0"
description = "Multi-version SGLang Qwen3 Next plugin with custom checkpoint adaptations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sglang>=0.5.0",
    "torch",
    "transformers",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.setuptools]
py-modules = ["sitecustomize"]
